--- a/reportgenerationangular/frontend/ReportGenerationUI/src/index.html
+++ b/reportgenerationangular/frontend/ReportGenerationUI/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <!-- <title>ReportGeneration</title> -->
-    <base href="/">
+    <base href="/report">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
